# library-prep-plate-prep

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/library_prep_plate_prep/: __init__.py  arranger.py  cli.py  costs.py  geometries.py  inference.py  input.py  metrics.py  plates.py  plotting.py  problems.py  simulate.py  skeleton.py  solvers.py  types.py  typing.py  utils.py
tests/: conftest.py  test_other.py  test_skeleton.py
tests/assets/: test_sample_data.csv
