[metadata]
name = library-prep-plate-prep
description = Add a short description here!
author = t-silvers
author_email = thomas.silvers@me.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project_urls =
    Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8

install_requires =
    importlib-metadata
    matplotlib
    numpy
    pandas
    pandera
    scipy
    smt
    xarray


[options.extras_require]
jax = ott-jax


[options.packages.find]
where = src
exclude =
    tests

testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    lppp = library_prep_plate_prep.cli

[tool:pytest]
addopts =
    --cov library_prep_plate_prep --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.5
package = library_prep_plate_prep
